--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-#header{
+#header {
     height: 80px;
     background-color: rgb(182, 127, 65);
     opacity: 0.6;
@@ -16,7 +16,7 @@
     z-index: 1;
 }
 
-#header .main-title a{
+#header .main-title a {
     display: inline-block;
     text-decoration: none;
     margin: 0 100px 0 57px;
@@ -27,18 +27,18 @@
     line-height: 80px;
 }
 
-#order-list{
+#order-list {
     display: inline-block;
     line-height: 80px;
 }
 
-.nav li{
+.nav li {
     list-style-type: none;
     display: inline-block;
     margin: 0 57px;
 }
 
-.nav li a{
+.nav li a {
     color: #000;
     font-weight: 800;
     text-transform: uppercase;
@@ -48,11 +48,11 @@
     text-align: center;
 }
 
-.nav li:hover a{
+.nav li:hover a {
     border-bottom: 3px solid #fa9e1b;
 }
 
-.search-button{
+.search-button {
     float: right;
     position: absolute;
     right: 0;
@@ -60,30 +60,31 @@
     line-height: 80px;
 }
 
-.search-button .nav-search{
+.search-button .nav-search {
     color: #fff;
 }
 
-.search-button .nav-search:hover{
+.search-button .nav-search:hover {
     color: red;
 }
 
-#slider{
+#slider {
     position: relative;
     margin-top: 80px;
     padding-top: 50%;
     background: url('/assets/img/travel1.jpg') top center / cover no-repeat;
 }
 
-#slider .text-content{
+#slider .text-content {
     position: absolute;
     top: 100px;
     text-align: center;
     color: #000;
     width: 100%;
+    text-shadow: 0 0 2px #fff;
 }
 
-.text-content .text-heading{
+.text-content .text-heading {
     font-size: 72px;
     text-transform: uppercase;
     margin-bottom: 15px;
@@ -91,7 +92,7 @@
     font-weight: 1000;
 }
 
-.text-content .text-subheading{
+.text-content .text-subheading {
     font-size: 60px;
     font-family: Beyond;
     font-weight: 1000;
