Add booking form to reserve.html

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -31,6 +31,10 @@
         width: calc(100% - 64px);
         text-align: center;
     }
+
+    .booking-section .col-12+.col-12 {
+        padding-top: 32px;
+    }
 }
 
 /* tablet */
