--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ html {
 
 #header {
     height: 80px;
-    background-color: rgb(182, 127, 65);
+    background: linear-gradient(#3f87a6, #ebf8e1, #f69d3c);
     opacity: 0.6;
     position: fixed;
     top: 0;
@@ -130,7 +130,7 @@ html {
     top: 0;
     z-index: 4;
     right: 0;
-    background-color: rgb(231, 185, 100);
+    background: linear-gradient(#f6c48b, #ca9fc5);
     overflow-x: hidden;
     transition: 0.5s;
 }
@@ -139,20 +139,22 @@ html {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    margin: 30px 0;
+    font-family: Beyond;
+    color: #010000;
     display: block;
     transition: 0.3s;
 }
 
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: orangered;
 }
 
 .sidenav .closebtn {
     position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
+    top: -75px;
+    right: 12px;
+    font-size: 80px;
     margin-left: 50px;
 }
 
