--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ html {
     background-color: #fa9e1b;
 }
 
-.login-button{
+.login-button {
     position: absolute;
     right: 0;
     top: 0;
@@ -95,26 +95,31 @@ html {
     padding: 0 10px;
 }
 
-.nav-login, .nav-bracket, .nav-register{
+.nav-login,
+.nav-bracket,
+.nav-register {
     list-style-type: none;
 }
 
-.login-button .nav-login a, .login-button .nav-bracket a, .login-button .nav-register a{
+.login-button .nav-login a,
+.login-button .nav-bracket a,
+.login-button .nav-register a {
     color: black;
     font-weight: 700;
     padding: 30px 0;
     text-decoration: none;
 }
 
-.login-button .nav-bracket a{
+.login-button .nav-bracket a {
     cursor: default;
 }
 
-.login-button .nav-bracket{
+.login-button .nav-bracket {
     margin: 0 5px;
 }
 
-.login-button .nav-login:hover a, .login-button .nav-register:hover a{
+.login-button .nav-login:hover a,
+.login-button .nav-register:hover a {
     color: orangered;
 }
 
@@ -124,7 +129,7 @@ html {
     text-decoration: none;
 } */
 
-.expand-side-nav{
+.expand-side-nav {
     display: none;
 }
 
@@ -164,7 +169,7 @@ html {
 }
 
 .drawer {
-    position: fixed; 
+    position: fixed;
     top: 16px;
     right: 15px;
     z-index: 2;
@@ -234,7 +239,13 @@ html {
     font-weight: 600;
 }
 
+.room-item .icon {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .room-item .icon i {
+    /* float: left; */
     font-size: 140%;
     padding: 8px;
 }
