--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,29 @@ html {
     text-align: center;
 }
 
+.part-header p{
+    text-transform: uppercase;
+    letter-spacing: .3125rem;
+    font-size: 2rem;
+}
+
+.illustrate{
+    width: 50%;
+    transform: translateX(50%);
+    margin-bottom: 48px;
+}
+
+
+#content .illustrate p{
+    text-align: center;
+    line-height: 1.66;
+    letter-spacing: 0.08rem;
+}
+
+#content .embedded-map{
+    text-align: center;
+}
+
 .reserve-content .room-item {
     display: flex;
     position: relative;
