--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,8 +1,52 @@
+/* about-us */
+.row{
+    display: flex;
+}
+.container-about-us-item{
+    position: relative;
+}
+.container-about-us-item img{
+    max-width: 100%;
+    height: 300px;
+}
+.container-about-us-content{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 44.1%;
+    background: rgba(232, 194, 124, 0.9);
+    opacity: 0.8;
+}
+.container-text{
+    width: 100%;
+    height: 100%;
+    padding-left: 38px;
+    padding-right: 40px;
+}
+.container-text>span{
+    color: rgb(24, 23, 23);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+
+}
+.container-text p{
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(24, 23, 23);
+    margin-top: 1px;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+}
+/* end about-us */
+
+/* footer */
 #footer{
     width: 100%;
     background-color: #e1ddb5; 
 }
-
 #footer .col h2{
     font-size: 18px;
     font-weight: 700;
@@ -13,6 +57,7 @@
 }
 .col{
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 .container-about-logo a{
     margin-top: 27px;
@@ -128,3 +173,4 @@
 .container-contact-info span:hover{
     color: orange;
 }
+/* end footer */
