--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,9 @@
     #header .main-title a {
         font-size: 15px !important;
     }
+    .possession-item{
+        margin-bottom: 10px;
+    }
 
     .sidenav {
         padding-top: 15px;
@@ -19,6 +22,10 @@
 
     #order-list {
         display: none;
+    }
+
+    .possession-item{
+        margin-bottom: 32px;
     }
 
     .tpr-modal {
@@ -89,6 +96,9 @@
 
     .text-content .text-heading {
         font-size: 50px;
+    }
+    .possession-item{
+        margin-bottom: 32px;
     }
 
     .text-content .text-subheading {
