--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,13 +3,16 @@
     #header .main-title a {
         font-size: 15px !important;
     }
-    .possession-list .possession-item{
+
+    .possession-list .possession-item {
         margin-bottom: 10px;
     }
-    .possession-list .possession-text{
-        position:sticky;
+
+    .possession-list .possession-text {
+        position: sticky;
         font-size: 5px;
     }
+
     .sidenav {
         padding-top: 15px;
     }
@@ -27,21 +30,21 @@
         display: none;
     }
 
-    .possession-item{
+    .possession-item {
         margin-bottom: 32px;
     }
 
-    .possession-list .possession-text{
-        position:sticky;
+    .possession-list .possession-text {
+        position: sticky;
         font-size: 20px;
     }
 
-    .possession-list .possession-subtitle{
-        position:sticky;
+    .possession-list .possession-subtitle {
+        position: sticky;
         font-size: 13px;
     }
 
-    .possession-list .possession-button{
+    .possession-list .possession-button {
         font-size: 13px;
     }
 
@@ -53,7 +56,7 @@
         z-index: 2;
     }
 
-    .login-button {
+    #lgBtn {
         margin-right: 50px;
     }
 
@@ -69,15 +72,15 @@
         font-size: 20px;
     }
 
-    .illustrate{
+    .illustrate {
         width: 50%;
     }
 
-    .illustrate p{
-        text-align:left;
+    .illustrate p {
+        text-align: left;
     }
 
-    .embedded-map .map-frame{
+    .embedded-map .map-frame {
         width: 50%;
         height: 300px;
     }
@@ -105,6 +108,7 @@
         padding-top: 32px;
     }
 }
+
 /* tablet */
 @media (min-width: 740px) and (max-width: 1024px) {
     #header .main-title a {
@@ -114,21 +118,22 @@
     .text-content .text-heading {
         font-size: 50px;
     }
-    .possession-item{
+
+    .possession-item {
         margin-bottom: 32px;
     }
 
-    .possession-list .possession-text{
-        position:sticky;
-        font-size: 15px;    
+    .possession-list .possession-text {
+        position: sticky;
+        font-size: 15px;
     }
 
-    .possession-list .possession-subtitle{
-        position:sticky;
+    .possession-list .possession-subtitle {
+        position: sticky;
         font-size: 13px;
     }
 
-    .possession-list .possession-button{
+    .possession-list .possession-button {
         font-size: 13px;
     }
 
