fix possession sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,22 +232,23 @@ html {
     letter-spacing: 0.08rem;
 }
 
+.desc .possession-list{
+    margin: 40px 0;
+}
+
 .desc .possession {
     height: 75vh;
-    position: relative;
 }
 
 .desc .possession-img {
     height: 50vh;
     width: 100%;
-    position: relative;
 }
 
 .desc .possession-img {
     display: inline-block;
     height: 50vh;
     width: 100%;
-    position: relative;
 }
 
 .desc .possession-container {
@@ -255,13 +256,12 @@ html {
     height: 20vh;
     bottom: 0;
     width: 100%;
-    position: absolute;
 }
 
 .desc .possession-subtitle {
     color: #000;
     text-align: start;
-    margin: 10px 10px 0 10px;
+    margin: 20px;
 }
 
 
@@ -269,12 +269,9 @@ html {
     text-align: center;
     letter-spacing: 2px;
     font-weight: 200;
-    position: absolute;
     font-weight: bold;
-    bottom: 140px;
-    left: 10px;
     color: rgb(43, 41, 41);
-    margin: 0;
+    margin: 10px;
     font-size: 18px;
     text-transform: uppercase;
     font-family: 'Courier New', Courier, monospace;
@@ -282,17 +279,16 @@ html {
 }
 
 .possession-list .possession-button {
-    position: absolute;
     text-transform: uppercase;
     font-size: Arial, Helvetica, sans-serif;
-    margin-left: 10px;
     color: #000;
     text-decoration: none;
-    bottom: 0;
+    padding: 10px;
+    margin-left: 10px;
 }
 
 .possession-list .possession-button:hover {
-    text-decoration: underline;
+    background-color: #fa9e1b;
 }
 
 .reserve-content .room-item {
