--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,6 +310,24 @@ html {
     font-weight: 600;
 }
 
+.reserve-content .room-desc-header{
+    font-family: 'Courier New', Courier, monospace;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.reserve-content .description{
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: .6875rem;
+    font-weight: 700;
+    letter-spacing: .09375rem;
+    line-height: 1.6;
+}
+
+.reserve-content .room-desc-content{
+    padding-right: 32px;
+}
+
 .room-item .icon {
     display: flex;
     flex-wrap: wrap;
