--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,8 +1,11 @@
-/* about-us */
-.row{
-    display: flex;
-    margin-bottom: -57px;
+.mgt32{
+    margin-top: 32px;
 }
+/* about-us */
+.about-us-item {
+    padding-top: 32px;
+}
+
 .container-about-us-item{
     position: relative;
 }
@@ -22,8 +25,8 @@
 .container-text{
     width: 100%;
     height: 100%;
-    padding-left: 38px;
-    padding-right: 40px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 .container-text>span{
     color: rgb(24, 23, 23);
@@ -48,18 +51,19 @@
     width: 100%;
     background-color: #e1ddb5 !important; 
 }
-#footer .col h2{
-    font-size: 18px;
-    font-weight: 700;
-    color: #000;
-    text-transform: uppercase;
-    margin-top: 43px;
-    margin-left: 15px;
+.grid.wide {
+    margin: 0 auto;
 }
-.col{
-    margin-top: 40px;
-    margin-bottom: 40px;
+
+#footer .rps_footer{
+    margin-left: 50px ;
+    margin-right: 0 ;
 }
+.footer-area{
+   padding-left: 8px;
+   padding-right: 8px
+}
+
 .container-about-logo a{
     margin-top: 27px;
     font-size: 30px;
@@ -95,7 +99,7 @@
 
 .social-list a{
     text-decoration: none;
-    font-size: 13px;
+    font-size: 16px;
     color: #333;
     padding: 10px;
     border: 2px solid #000;
@@ -179,12 +183,12 @@
 .copyright {
     text-align: center;
     display: block;
-    margin-top: 35px;
+    margin-top: -14px;
     color: rgb(63, 63, 40);
     font-weight: 700;
-}
-.copyright a{
-    color: rgb(145, 147, 225);
+    padding-top: 32px;
+    padding-bottom: 10px;
+    opacity: 0.5;
 }
 /* end footer */
 
@@ -202,21 +206,18 @@
     
 }
 @media (min-width:720px) and (max-width: 1023px){
-    .row{
-        display: block;
-    }
     .container-about-us-item img {
         width: 100%;
     }
     .rps_footer{
         display: flex;
     }
+    .social-list{
+        padding-top: 16px;
+    }
 }
 @media (min-width:330px) and (max-width:719px)
 {
-    .row{
-        display: block ;
-    }
 
     .container-about-logo {
         padding-top: 16px;
@@ -245,17 +246,20 @@
     .container-tag{
         font-size: 30px;
     }
+    .rps_footer{
+        margin-left: 0px !important;
+    }
 }
 
 @media (max-width: 329px){
-    .row{
-        display: block;
-    }
     .container-text span{
-        font-size: 8px;
+        font-size: 12px;
     }
     .container-text p{
-        font-size: 7px;
+        font-size: 12px;
+    }
+    .rps_footer{
+        margin-left: 0px !important;
     }
 }
 
