--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,69 @@ html {
     z-index: 1;
 }
 
+.star{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    z-index: 1;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.star img{
+    animation: bubble 7s linear infinite;
+}
+
+@keyframes bubble{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    70%{
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-80vh);
+        opacity: 0;
+    }
+}
+
+
+.star img:nth-child(1){
+    animation-delay: 2s;
+}
+.star img:nth-child(2){
+    animation-delay: 1s;
+}
+.star img:nth-child(3){
+    animation-delay: 3s;
+}
+.star img:nth-child(4){
+    animation-delay: 4.5s;
+}
+.star img:nth-child(5){
+    animation-delay: 3s;
+}
+.star img:nth-child(6){
+    animation-delay: 6s;
+}
+.star img:nth-child(7){
+    animation-delay: 6.6s;
+}
+.star img:nth-child(8){
+    animation-delay: 2s;
+}
+.star img:nth-child(9){
+    animation-delay: 5.6s;
+}
+.star img:nth-child(10){
+    animation-delay: 6.9s;
+}
+
 #header .attach-logo {
     margin-left: 10px;
     line-height: 80px;
