--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,8 @@ html {
 
 .star img{
     animation: bubble 7s linear infinite;
+    width: 30px;
+    height: 30px;
 }
 
 @keyframes bubble{
@@ -116,7 +118,12 @@ html {
 .star img:nth-child(10){
     animation-delay: 6.9s;
 }
-
+.star img:nth-child(11){
+    animation-delay: 7.1s;
+}
+.star img:nth-child(12){
+    animation-delay: 4.7s;
+}
 #header .attach-logo {
     margin-left: 10px;
     line-height: 80px;
